--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <meta http-equiv="X-UA-Compatible" content="ie=edge">
   <title>Jackpot</title>
+  <link href="https://fonts.googleapis.com/css?family=Press+Start+2P|Roboto&display=swap" rel="stylesheet">
   <link rel="stylesheet" href="style.css">
 </head>
 
@@ -28,9 +29,22 @@
     <section class="panel">Your balance: <span class="wallet"></span></section>
 
     <section class="score">
-      <span class="result"></span> Number of games <span class="number"></span>, including
-      <span class="win"></span> wins
-      and <span class="loss"></span> losses
+      <span class="result"></span> Number of games:
+      <span class="number"></span>
+      <table>
+        <tr>
+          <th>wins</th>
+          <th>losses</th>
+        </tr>
+        <tr>
+          <td>
+            <span class="win"></span>
+          </td>
+          <td>
+            <span class="loss"></span>
+          </td>
+        </tr>
+      </table>
     </section>
 
   </div>
